--- a/package.json
+++ b/package.json
@@ -21,12 +21,17 @@
     "mobx-react": "^4.2.2",
     "multer": "^1.3.0",
     "next": "^2.4.7",
+    "normalize.css": "^7.0.0",
     "nprogress": "^0.2.0",
+    "postcss-easy-import": "^3.0.0",
+    "postcss-loader": "^2.0.9",
+    "raw-loader": "^0.5.1",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-motion": "^0.5.0",
     "react-scroll-to-component": "^1.0.1",
     "react-tap-event-plugin": "^2.0.1",
+    "sass-loader": "^6.0.6",
     "superagent": "^3.6.0"
   },
   "devDependencies": {
