--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "nprogress": "^0.2.0",
     "postcss-easy-import": "^3.0.0",
     "postcss-loader": "^2.0.9",
+    "radium": "^0.19.6",
     "raw-loader": "^0.5.1",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
