--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
     "dev": "node server.js",
     "build": "next build",
     "start": "NODE_ENV=production node server.js",
+    "deploy":"sh deploy.sh",
     "docker:build" : "docker build -t pf-website .",
-    "docker:run": "docker run --rm -p 8080:8000 pf-website",
-    "docker:clear": "docker rmi -f $(docker images -q)"
+    "docker:run": "docker run --rm -p 80:8000 pf-website",
+    "docker:clear": "docker rm -f $(docker ps -a -q) && docker rmi -f $(docker images -q)"
   },
   "dependencies": {
     "autoprefixer": "6.7.6",
