--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   "devDependencies": {
     "babel-plugin-inline-react-svg": "^0.2.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "compression-webpack-plugin": "^1.0.1",
     "node-sass": "^4.5.3",
     "now": "^3.1.0"
   }
